--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>Hoàng Nguyễn by nvhoang</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Hoàng Nguyễn</h1>
+        <h2>nvhoang</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/nvhoang" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <p>Hello</p>
+      </section>
+    </div>
+
+    
+  </body>
+</html>
