--- a/about.html
+++ b/about.html
@@ -7,3 +7,4 @@ title: About
 
 I am a geek interested in pretty much anything related to computers. 
 
+I came from the country where Internet was extremely limited back then so most of the stuff I learned was through self-learning.
