--- a/about.html
+++ b/about.html
@@ -7,4 +7,13 @@ title: About
 
 I am a geek interested in pretty much anything related to computers. 
 
-I came from the country where Internet was extremely limited back then so most of the stuff I learned was through self-learning.
+I came from the country where Internet was extremely limited back then so most of the stuff I learned was through self-learning. 
+I first touched a computer when I was 15. It was a 386. I was hooked since then.
+
+* I wrote my first AI chess program in Pascal when I was 15. It managed to beat my friend in one game that he later disclaimed that he was drunk :-).
+* My first time discovered event-based programming by myself was super exciting. Remember back then Pascal didn't have any notion of multithreading.
+So I pretty much had to multiplex routines in a single-threaded program. I wrote a bunch of multi-player games like Tetris, Bomberman.
+* I hacked into the intranet of my highschool and droppped a keylogger there. I just wanted to hide my games in the server hard disk :D. It was later discovered by
+the admin and he was super pissed. Nothing happened though.
+* I wrote my first Virus in Assembly when I was 16. I learned this through a book that my friend's relative brought from overseas. 
+The Virus hid itself in MS-DOS EXE and replicated whenever that file was replicated. It will occasionally erase the letters in the text screen.
