--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@ title: About
 
 I am a geek interested in pretty much anything related to computers. 
 
-I came from the country where Internet was extremely limited back then so most of the stuff I learned was through self-learning. 
-I first touched a computer when I was 15. It was a 386. I was hooked since then.
-
+* I came from the country where Internet was extremely limited back then so most of the stuff I learned was through self-learning. 
+* I first touched a computer when I was 15. It was a 386. I was hooked since then.
+* My parent paid nearly a thousand bucks for my first computer (a 486 DX). I was exteremely grateful. I spent almost 12 hours a day on it.
 * I wrote my first AI chess program in Pascal when I was 15. It managed to beat my friend in one game that he later disclaimed that he was drunk :-).
 * My first time discovered event-based programming by myself was super exciting. Remember back then Pascal didn't have any notion of multithreading.
 So I pretty much had to multiplex routines in a single-threaded program. I wrote a bunch of multi-player games like Tetris, Bomberman.
@@ -17,3 +17,6 @@ So I pretty much had to multiplex routines in a single-threaded program. I wrote
 the admin and he was super pissed. Nothing happened though.
 * I wrote my first Virus in Assembly when I was 16. I learned this through a book that my friend's relative brought from overseas. 
 The Virus hid itself in MS-DOS EXE and replicated whenever that file was replicated. It will occasionally erase the letters in the text screen.
+* I wrote the entire bulletin board program for my HS class in raw Javascript with no fancy AJAX or libs.
+* My HS was also the place where I hooked up with algorithms.
+* I worked part-time for a startup when I was in college. I was responsible for anti-crack module in their software. That was when I learned IDA and stuff.
