--- a/about.html
+++ b/about.html
@@ -23,4 +23,5 @@ The virus hides itself in MS-DOS EXE and gets replicated whenever that file is e
 * College went fast with a lot of projects. I was very interested in network programming. We wrote a aircraft shooting games that can be played over intranet.
 * US was the place that made me realize all that I self-learned in the past was pretty much standard :-). There was a lot more exicting stuff out there. Ph.D. went fast, mostly academic stuff (https://scholar.google.com/citations?user=U9Ekj6cAAAAJ&hl=en&oi=ao). I learned a lot.
 * I landed a job at Google in 2010 working on G+ (before it was launched), then to YouTube ASR team and Google Docs in Sydney.
-* I joined Tetration (a security startup later aquired by Cisco) in 2015 till now.
+* I joined Tetration (a security startup later aquired by Cisco) in 2015 till 2021.
+* I am now at Netflix working on some exiciting projects in Big Data Platform.
